tests/ui/generic-const-items/unsatisfied-outlives-bounds.stderr
error: lifetime may not live long enough
  --> $DIR/unsatisfied-outlives-bounds.rs:10:14
   |
LL | fn parametrized0<'any>() {
   |                  ---- lifetime `'any` defined here
LL |     let () = C::<'static, &'any ()>;
   |              ^^^^^^^^^^^^^^^^^^^^^^ requires that `'any` must outlive `'static`

error: lifetime may not live long enough
  --> $DIR/unsatisfied-outlives-bounds.rs:14:14
   |
LL | fn parametrized1<'any>() {
   |                  ---- lifetime `'any` defined here
LL |     let () = K::<'static, 'any>;
   |              ^^^^^^^^^^^^^^^^^^ requires that `'any` must outlive `'static`

error: aborting due to 2 previous errors

